# cinebuzz-flask

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  wsgi.py
backend/: __init__.py  models.py  requirements.txt  router.py
backend/api/: api_models.py  parsers.py  resources.py
backend/rest/: api_models.py  resources.py
frontend/: package-lock.json
frontend/app/: layout.tsx
migrations/: env.py
migrations/versions/: 2c592d3a12ff_changes.py  d5339bedb6fd_initial_migration.py  e7cf5ab8b9e1_initial_migration.py
