[tool.poetry]
name = "cinebuzz-backend"
version = "0.1.0"
description = "Cinebuzz Movie Booking Backend"
authors = ["lamergameryt <ifung230@gmail.com>", "amittkulkarni <kulkarniamit953@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
flask-restx = "^1.3.0"
flask-cors = "^4.0.1"
flask-jwt-extended = "^4.6.0"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
